--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,6 +44,13 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <li>
+        <% if current_user %>
+          Signed in as <%= current_user.first_name %> | <%= link_to 'Logout', logout_path %>
+        <% else %>
+          <%= link_to 'Login', login_path %> | <%= link_to 'Signup', new_user_path %>
+        <% end %>
+      </li>
       </ul>
     </div>
   </div>
