Change totals from cents to full dollars

--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -11,7 +11,7 @@
 <%= item.quantity %>
 </td>
 <td>
-<%= humanized_money_with_symbol item.total_price_cents %>
+<%= humanized_money_with_symbol item.total_price_cents/100 %>
 </td>
 
 </tr>
