--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,6 +26,34 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="review-form"
+        <%= form_for [@product, @review] do |f| %>
+
+          <div class="question">
+            <%= f.label :user_id %>
+            <%= f.text_field :user_id%>
+          </div>
+
+          <div class="question">
+              <%= f.label :description %>
+              <%= f.text_field :description %>
+          </div>
+
+          <div class="question">
+            <%= form.label :rating %>
+            <%= f.select :rating, options_for_select([["Select One", ""], 1, 2, 3, 4, 5]), :class => 'genForm_dropBox' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="reviews">
+        <%= render "reviews" %>
+      </div>
+    </div>
+
   </article>
 
 </section>
