--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -21,32 +21,16 @@
           <dt>Quantity</dt>
           <dd><%= @product.quantity %></dd>
           <dt>Price</dt>
-          <dd><%= @product.price %></dd>
+          <dd><%= humanized_money_with_symbol @product.price %></dd>
         </dl>
       </div>
     </div>
 
-    <div class="row">
-      <div class="review-form"
-        <%= form_for [@product, @review] do |f| %>
-
-          <div class="question">
-            <%= f.label :user_id %>
-            <%= f.text_field :user_id%>
-          </div>
-
-          <div class="question">
-              <%= f.label :description %>
-              <%= f.text_field :description %>
-          </div>
-
-          <div class="question">
-            <%= form.label :rating %>
-            <%= f.select :rating, options_for_select([["Select One", ""], 1, 2, 3, 4, 5]), :class => 'genForm_dropBox' %>
-          </div>
-        <% end %>
+    <% if current_user %>
+      <div class="row">
+        <%= render "review_form" %>
       </div>
-    </div>
+    <% end %>
 
     <div class="row">
       <div class="reviews">
