--- a/app/views/products/_review_form.html.erb
+++ b/app/views/products/_review_form.html.erb
@@ -1,15 +1,16 @@
-<h3> Review this product </h3>
 <div class="review-form">
+  <h3> Review this product </h3>
   <%= form_for [@product, @review] do |f| %>
 
     <div class="form-group">
-      <%= f.label :description %>
-      <%= f.text_area :description %>
+      <%= f.label :rating %>
+      <%= f.select :rating, options_for_select([["Select One", ""], 1, 2, 3, 4, 5]), class: 'genForm_dropBox' %>
     </div>
 
     <div class="form-group">
-      <%= f.label :rating %>
-      <%= f.select :rating, options_for_select([["Select One", ""], 1, 2, 3, 4, 5]), :class => 'genForm_dropBox' %>
+      <%= f.label 'Write a review' %>
+      <br>
+      <%= f.text_area :description, class: 'card-description' %>
     </div>
 
     <%= f.submit 'Review product', class: 'btn btn-primary' %>
