--- a/app/views/products/_reviews.html.erb
+++ b/app/views/products/_reviews.html.erb
@@ -1,10 +1,24 @@
-<dl class="dl-horizontal">
-  <% @product.reviews.each do |item| %>
+  <% if flash[:notice] %>
+    <div class="notice"><%= flash[:notice] %></div>
+  <% end %>
+  
+  <% @product.reviews.order('reviews.created_at DESC').each do |item| %>
+    <div class="panel panel-default p">
 
-    <dt>Name: <%= item.user.first_name %></dt>
-    <dd>Rating: <%= item.rating %></dd>
-    <dd>Review: <%= item.description %></dd>
+      <div class="panel-heading">Name: <%= item.user.first_name %></div>
 
+      <div class="card-text">Rating: <%= item.rating %></div>
+
+      <div class="card-text">Post date: <%= (item.created_at).to_formatted_s(:long)  %></div>
+      <div class="card-text">Review: <%= item.description %></div>
+
+      <% if item.user == current_user %>
+      <div class="card-text">
+      <%= link_to 'Delete', review_path(item.id), class: 'btn btn-primary', method: :delete, :data => {:confirm => 'Are you sure?'} %></dd>
+      </div>
+        
+    </div>
+  <% end %>
 <% end %>
-</dl>
+
   
