Add star ratings to products page

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -128,3 +128,12 @@ main section.cart-show {
   font-size: 2em;
 }
 
+.index-rated {
+  color: #FFDF00;
+  font-size: 1.3em;
+}
+
+.index-not-rated {
+  font-size: 1.3em;
+}
+
