--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,8 +14,10 @@
 
       <div class="col-sm-8">
         <dl class="dl-horizontal">
-          <dt>Name</dt>
-          <dd><%= @product.name %></dd>
+          <div class="product-name">
+            <dt>Name</dt>
+            <dd ><%= @product.name %></dd>
+          </div>
           <div class="rating-section">
           <dt>Rating</dt>
           <dd><% rating = @product.reviews.average(:rating).to_i %>
